src/objects/CPQ_Pricing_Model_2_Quantity_Band__c.object
<CustomObject>
    <description>Object used to store assigned Quantity based on DWP value</description>
    <fields>
        <fullName>CPQ_End_DWP__c</fullName>
        <label>End DWP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pricing Model #2 Quantity Bands</relationshipLabel>
        <relationshipName>Pricing_Model_2_Quantity_Bands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Start_DWP__c</fullName>
        <inlineHelpText>Lower bound for quantity assignment</inlineHelpText>
        <label>Start DWP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Pricing Model #2 Quantity Band</label>
    <nameField>
        <displayFormat>QB-{0000}</displayFormat>
        <label>Quantity Band Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Model #2 Quantity Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>